terraform/aws/aws-eks-module/forgerock/ssl/sample-app/ig-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ig
    app.kubernetes.io/component: ig
    app.kubernetes.io/instance: ig
    app.kubernetes.io/name: ig
    app.kubernetes.io/part-of: forgerock
    tier: middle
  name: ig
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ig
      app.kubernetes.io/component: ig
      app.kubernetes.io/instance: ig
      app.kubernetes.io/name: ig
      app.kubernetes.io/part-of: forgerock
      tier: middle
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      creationTimestamp: null
      labels:
        app: ig
        app.kubernetes.io/component: ig
        app.kubernetes.io/instance: ig
        app.kubernetes.io/name: ig
        app.kubernetes.io/part-of: forgerock
        tier: middle
    spec:
      volumes:
      - name: ig-volume
        configMap:
          name: ig-certificates
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: MY_POD_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        image: devforge1/ig:v2023-v4-sample
        #image: gcr.io/forgerock-io/ig@sha256:7ed59f287751b41de264794b208e0a747b117c843094eb8112ce74f0901a0045
        #image: gcr.io/forgerock-io/ig/pull-requests@sha256:7c94bcf15af07334359f062782a314ba72059c5a5a8a04cd24bd2eec148c590f
        #image: gcr.io/forgerock-io/ig@sha256:f98027c534652a9356e796b541e9c460f47db9a96c5733fcae6cdabb40ca9b7d
        imagePullPolicy: Always
        volumeMounts:
        - name: ig-volume
          mountPath: /var/ig/secrets
        # livenessProbe:
        #   httpGet:
        #     host:
        #     scheme: HTTP
        #     path: /
        #     port: 8080
        #     httpHeaders:
        #     - name: Host
        #       value: status.podIP
          # initialDelaySeconds: 5
          # periodSeconds: 5
          # successThreshold: 1
          # timeoutSeconds: 1
          # failureThreshold: 1
        name: ig
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        ports:
        - containerPort: 8080
          protocol: TCP
        # readinessProbe:
        #   httpGet:
        #     host:
        #     scheme: HTTP
        #     path: /
        #     port: 8080
        #     httpHeaders:
        #     - name: Host
        #       value: status.podIP
          # failureThreshold: 1
          # initialDelaySeconds: 5
          # periodSeconds: 10
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsGroup: 0
        runAsUser: 11111
      terminationGracePeriodSeconds: 30
      hostNetwork: true
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ig
    app.kubernetes.io/component: ig
    app.kubernetes.io/instance: ig
    app.kubernetes.io/name: ig
    app.kubernetes.io/part-of: forgerock
    tier: middle
  name: ig
spec:
  ipFamilies:
  - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: ig
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ig
    app.kubernetes.io/component: ig
    app.kubernetes.io/instance: ig
    app.kubernetes.io/name: ig
    app.kubernetes.io/part-of: forgerock
    tier: middle
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # LOAD BALANCER
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ip-address-type: dualstack
    alb.ingress.kubernetes.io/load-balancer-name: ig-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}, {"HTTP": 80}, {"HTTPS": 443}, {"HTTPS": 8443}]' #'[{"HTTP": 8080}]'
    alb.ingress.kubernetes.io/tags: Purpose=lab,ApplicationIDName=frig-dev,RSMs=X265140,BusinessUnit=gtcto,CostCenter=713104,__Exception-ELBLogging=0123
    alb.ingress.kubernetes.io/group.name: ig-group
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:973946915053:certificate/d541b30e-4a84-436a-973c-223235a67841
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
    #alb.ingress.kubernetes.io/certificate-arn:
    #alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
    #alb.ingress.kubernetes.io/security-groups:
    #alb.ingress.kubernetes.io/subnets: subnet-0c68d80e0fc1987d0, subnet-0a684a23337ce494f
    # NEW CONFIG
    #alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
    # NEW CONFIG
    # HEALTH CHECK
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '8'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: '8080'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: '200'
  name: ig
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ig
                port:
                  number: 8080
